# pgp-sig2dot

./: .gitignore  LICENSE  README.md  flake.nix
python-part/: main.py  pgp-sig2dot-python-part.py  setup.py
rust-part/: Cargo.toml
rust-part/src/: cert.rs  cli.rs  main.rs  structure.rs
