[package]
name = "pgp-sig2dot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
env_logger = "0.11.3"
log = "0.4.21"
num_enum = { version = "0.7.2", features = ["complex-expressions"] }
petgraph = { version = "0.6.5", features = ["rayon", "graphmap"], default-features = false }
serde = { version = "1.0.202", features = ["derive", "rc"] }
serde_json = "1.0.117"
serialize_display_adapter_macro_derive = "0.2.0"

sequoia-wot = "0.12.0"
sequoia-cert-store = "0.6.0"
sequoia-openpgp = { version = "1.0.0", default-features = false }
clio = { version = "0.3.5", features = ["clap-parse", "curl", "http-curl"] }
sequoia-net = "0.28.0"
futures = "0.3.30"
tokio = "1.39.1"

[features]
default = ["sequoia-openpgp/default"]

# but allow others to select a different backend, as well
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-botan2 = ["sequoia-openpgp/crypto-botan2"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]

# Experimental and variable-time cryptographic backend opt-ins
allow-experimental-crypto = ["sequoia-openpgp/allow-experimental-crypto"]
allow-variable-time-crypto = ["sequoia-openpgp/allow-variable-time-crypto"]

